# Multi-Agent-DeepsearchSystem

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py  models.py
backend/app/agents/: critic.py  executor.py  planner.py  reporter.py
backend/app/cache/: redis_cache.py
backend/app/graph/: builder.py  state.py
backend/app/persistence/: database.py  repository.py
backend/app/prompts/: templates.py
backend/app/tools/: search.py
backend/app/tracing/: langsmith.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/services/: api.ts
