[project]
name = "deep-research-agent"
version = "0.1.0"
description = "LangGraph-based multi-agent deep research system with iterative refinement"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    "tavily-python>=0.5.0",
    "ddgs>=9.0.0",
    "asyncpg>=0.30.0",
    "redis>=7.0.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.6.0"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
